# dxfeed-graal-swift-api

./: .gitignore  .swiftlint.yml  Package.swift  README.md  build.gradle  build_doc.sh  metadata.json  module.map  release_sp.sh
.spm_jrog/: Package.swift  release_sp.sh
DXFFramework/: DXFConnection.h  DXFConnection.m  DXFConnection.mm  DXFConnectionState.h  DXFControl.h  DXFEnvironment+Graal.h  DXFEnvironment.h  DXFEnvironment.m  DXFFeed.h  DXFFeed.m  DXFFramework.h  DXFInternal.h  DXFPublisher.h  DXFPublisher.m  DXFPublisherConnection.h  DXFPublisherConnection.m  DXFSubscription.h  DXFSubscription.m  DXFSubscriptionListener.h  DXFSystem.h  DXFSystem.mm
DXFFramework.xcodeproj/: project.pbxproj
DXFFrameworkTests/: DXFFrameworkTests.swift  FeedTests.swift  PublishTest.swift  TestListener.swift
DXFeedFramework/: DXFEnvironment+Graal.h  DXFEnvironment.h  DXFEnvironment.m  DXFSystem.h  DXFSystem.mm  DXFeedFramework.h  DXFeedInitializator+Graal.h  DXFeedInitializator.h  DXFeedInitializator.m  DXFeedSystem.h  DXFeedSystem.mm  DxFeedSwiftFramework.h  SystemProperty.swift  TestGraalvm.h  TestGraalvm.m
DXFeedFramework.xcodeproj/: project.pbxproj
DXFeedFrameworkTests/: CandleTests.swift  DXAsyncLastTest.swift  DXAttachTest.swift  DXAuthTokenTest.swift  DXCandleTests.swift  DXConnectionStateTests.swift  DXConnectionTest.swift  DXExceptPublisherTests.xctestplan  DXExceptionTest.swift  DXFeedAllTests.xctestplan  DXFeedFrameworkTests.swift  DXFeedFrameworkTests.xctestplan  FeedTest.swift  (+31 more)
graal-native-api-ios/: CMakeLists.txt  dxfg_catch_exception.h  dxfg_javac.h  dxfg_subscription.h  dxfg_system.h
graal-native-api-ios/docs/: graal-native-api-version.inc  native_library_info_20230103_182304.txt  target_info_20230103_182249.txt
(+3616 files in other folders)
